added html and CSS to home page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz Game</title>
     <link rel="stylesheet" href="style.css"/>
     <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Quiz Game</h1>
+    </header>
+    <p>Welcome to the game!</p>
+    <div class="button-container">
+        <a href="#" class="button">How to Play</a>
+        <a href="#" class="button">Play</a>
+        <a href="#" class="button">About Me</a>
+    </div>
 </body>
 </html>
